--- a/src/Ue2/Ue2.fxml
+++ b/src/Ue2/Ue2.fxml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Ue2.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="sliderCountObjects" prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Ue2.Controller">
+   <children>
+      <Pane fx:id="canvasHolder" layoutX="92.0" layoutY="27.0" prefHeight="398.0" prefWidth="416.0" style="-fx-background-color: white;">
+         <children>
+            <TabPane fx:id="tabPane" prefHeight="398.0" prefWidth="416.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab closable="false" text="Test">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Canvas fx:id="canvas" height="366.0" width="416.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab closable="false" text="Auswertung">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="12.0" layoutY="31.0" prefHeight="27.0" prefWidth="389.0" text="Wie viele Abweichungen haben Sie präattentiv wahrgenommen" />
+                              <TextField fx:id="textField" layoutX="126.0" layoutY="87.0" />
+                              <Button fx:id="okButton" disable="true" layoutX="189.0" layoutY="145.0" mnemonicParsing="false" onMouseClicked="#calculateResult" text="Ok"/>
+                              <BarChart fx:id="chart" layoutX="10.0" layoutY="183.0" prefHeight="166.0" prefWidth="394.0">
+                                <xAxis>
+                                  <CategoryAxis side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis side="LEFT" />
+                                </yAxis>
+                              </BarChart>
+                           </children></AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </children>
+      </Pane>
+      <Button layoutX="276.0" layoutY="634.0" mnemonicParsing="false" onMouseClicked="#startRound" text="Start" />
+      <Slider fx:id="timeSlider" layoutX="93.0" layoutY="482.0" majorTickUnit="100.0" max="2000.0" min="100.0" prefHeight="50.0" prefWidth="239.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="500.0" />
+      <Label layoutX="153.0" layoutY="447.0" prefHeight="17.0" prefWidth="118.0" style="-fx-background-color: white;" text="Zeit in ms" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Slider fx:id="roundSlider" blockIncrement="1.0" layoutX="94.0" layoutY="561.0" majorTickUnit="2.0" max="20.0" min="1.0" minorTickCount="1" prefHeight="50.0" prefWidth="239.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+      <Label layoutX="130.0" layoutY="532.0" prefHeight="29.0" prefWidth="166.0" style="-fx-background-color: white;" text="Rundenanzahl" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ComboBox layoutX="358.0" layoutY="561.0" prefWidth="150.0" promptText="Select" />
+      <Slider fx:id="objectSlider" blockIncrement="1.0" layoutX="358.0" layoutY="491.0" min="5.0" prefHeight="16.0" prefWidth="150.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="20.0" />
+      <Label layoutX="346.0" layoutY="447.0" prefHeight="29.0" prefWidth="175.0" style="-fx-background-color: white;" text="Anzahl Objekte" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
