--- a/src/Ue2/Ue2.fxml
+++ b/src/Ue2/Ue2.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="sliderCountObjects" prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Ue2.Controller">
+<AnchorPane fx:id="sliderCountObjects" onMouseClicked="#showSelection" prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Ue2.Controller">
    <children>
       <Pane fx:id="canvasHolder" layoutX="92.0" layoutY="27.0" prefHeight="398.0" prefWidth="416.0" style="-fx-background-color: white;">
          <children>
@@ -36,7 +36,7 @@
                            <children>
                               <Label layoutX="12.0" layoutY="31.0" prefHeight="27.0" prefWidth="389.0" text="Wie viele Abweichungen haben Sie präattentiv wahrgenommen" />
                               <TextField fx:id="textField" layoutX="126.0" layoutY="87.0" />
-                              <Button fx:id="okButton" disable="true" layoutX="189.0" layoutY="145.0" mnemonicParsing="false" onMouseClicked="#calculateResult" text="Ok"/>
+                              <Button fx:id="okButton" disable="true" layoutX="189.0" layoutY="145.0" mnemonicParsing="false" onMouseClicked="#calculateResult" text="Ok" />
                               <BarChart fx:id="chart" layoutX="10.0" layoutY="183.0" prefHeight="166.0" prefWidth="394.0">
                                 <xAxis>
                                   <CategoryAxis side="BOTTOM" />
@@ -65,9 +65,14 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <ComboBox layoutX="358.0" layoutY="561.0" prefWidth="150.0" promptText="Select" />
       <Slider fx:id="objectSlider" blockIncrement="1.0" layoutX="358.0" layoutY="491.0" min="5.0" prefHeight="16.0" prefWidth="150.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="20.0" />
       <Label layoutX="346.0" layoutY="447.0" prefHeight="29.0" prefWidth="175.0" style="-fx-background-color: white;" text="Anzahl Objekte" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="Select" layoutX="359.0" layoutY="573.0" onMouseClicked="#showSelection" prefWidth="150.0" />
+      <Label layoutX="364.0" layoutY="532.0" prefHeight="29.0" prefWidth="138.0" style="-fx-background-color: white;" text="Eigenschaft" textAlignment="CENTER" textOverrun="CLIP">
          <font>
             <Font size="24.0" />
          </font>
