--- a/src/Ue2/Ue2.fxml
+++ b/src/Ue2/Ue2.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="sliderCountObjects" onMouseClicked="#showSelection" prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Ue2.Controller">
+<AnchorPane prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Ue2.Controller">
    <children>
       <Pane fx:id="canvasHolder" layoutX="92.0" layoutY="27.0" prefHeight="398.0" prefWidth="416.0" style="-fx-background-color: white;">
          <children>
