--- a/src/Ue2/Ue2.fxml
+++ b/src/Ue2/Ue2.fxml
@@ -52,7 +52,7 @@
             </TabPane>
          </children>
       </Pane>
-      <Button layoutX="276.0" layoutY="634.0" mnemonicParsing="false" onMouseClicked="#startRound" text="Start" />
+      <Button layoutX="276.0" layoutY="665.0" mnemonicParsing="false" onMouseClicked="#startRound" text="Start" />
       <Slider fx:id="timeSlider" layoutX="93.0" layoutY="482.0" majorTickUnit="100.0" max="2000.0" min="100.0" prefHeight="50.0" prefWidth="239.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="500.0" />
       <Label layoutX="153.0" layoutY="447.0" prefHeight="17.0" prefWidth="118.0" style="-fx-background-color: white;" text="Zeit in ms" textAlignment="CENTER" textOverrun="CLIP">
          <font>
@@ -73,6 +73,11 @@
       </Label>
       <ChoiceBox fx:id="Select" layoutX="359.0" layoutY="573.0" onMouseClicked="#showSelection" prefWidth="150.0" />
       <Label layoutX="364.0" layoutY="532.0" prefHeight="29.0" prefWidth="138.0" style="-fx-background-color: white;" text="Eigenschaft" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="36.0" layoutY="620.0" prefHeight="29.0" prefWidth="528.0" style="-fx-background-color: white;" text="Zählen Sie die wahrgenommenen Distraktoren" textAlignment="CENTER" textOverrun="CLIP">
          <font>
             <Font size="24.0" />
          </font>
